--- a/public/index.html
+++ b/public/index.html
@@ -64,14 +64,10 @@
                             <button onclick="setCountdown()"
                                 class="bg-blue-100 text-blue-800 px-3 rounded font-bold text-xs">SET</button>
                         </div>
-                        <label><input type="checkbox" id="timer-show-start"> Show "Service starts at" message</label>
-                        <div class="flex gap-2">
-                            <label>Clock Offset: <input id="timer-clock-offset" type="range" min="-200" max="200"
-                                    value="0" class="w-20"></label>
-                            <label>Text Offset: <input id="timer-text-offset" type="range" min="-200" max="200"
-                                    value="0" class="w-20"></label>
-                        </div>
-                        <button onclick="toggleTimer()"
+                        <button id="btn-toggle-msg" onclick="toggleStartMessage()"
+                            class="w-full bg-blue-100 text-blue-900 py-2 rounded font-bold mb-2">SHOW START
+                            MESSAGE</button>
+                        <button id="btn-toggle-timer" onclick="toggleTimer()"
                             class="w-full bg-blue-900 text-white py-3 rounded font-bold">SHOW TIMER</button>
                     </div>
                 </div>
@@ -124,9 +120,7 @@
         <!-- Clock -->
         <div id="comp-clock" class="clock-container">
             <div id="el-clock" class="time-display">10:00:00 AM</div>
-            <div id="el-start-time" class="time-display hidden">Start: 09:30</div>
             <div id="el-start-message" class="time-display hidden">Service starts at 09:30</div>
-            <div id="el-countdown" class="hidden countdown-display">00:00:00</div>
         </div>
         <!-- Lower Third -->
         <div id="comp-lt" class="lt-bar-container">
