--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     </script>
     <script src="/socket.io/socket.io.js"></script> <!-- Auto-served by Node -->
     <link
-        href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;900&family=Lato:wght@300;400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;900&family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&family=Playfair+Display:wght@400;700&family=Roboto:wght@300;400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -68,9 +68,13 @@
                     class="bg-white dark:bg-slate-800 p-5 rounded-xl shadow-sm border border-slate-200 dark:border-slate-700">
                     <div class="flex justify-between items-center mb-4">
                         <h2 class="text-lg font-bold text-blue-900 dark:text-blue-300">Lower Third</h2>
-                        <button onclick="openListsModal()"
-                            class="text-xs text-blue-600 dark:text-blue-400 font-bold underline">Manage
-                            Lists</button>
+                        <div class="flex gap-2">
+                            <a href="/designer.html" target="_blank"
+                                class="text-xs bg-purple-100 dark:bg-purple-900 text-purple-600 dark:text-purple-200 px-2 py-1 rounded font-bold">Designer</a>
+                            <button onclick="openListsModal()"
+                                class="text-xs text-blue-600 dark:text-blue-400 font-bold underline">Manage
+                                Lists</button>
+                        </div>
                     </div>
                     <div class="space-y-4">
                         <select id="sel-person"
